--- a/fullstackminiprac/backend/package.json
+++ b/fullstackminiprac/backend/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "server.js",
   "type": "module",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.2.1"
   }
 }
